--- a/trunk/LanguagePack_de.properties
+++ b/trunk/LanguagePack_de.properties
@@ -1,6 +1,8 @@
+error.no_download = Es konnte kein weiterer Download ermittelt werden
 label.tab.download        = Download Liste
 label.tab.plugin_activity = Plugin Aktivitäten
-label.tab.download.column_link = Download
-label.tab.download.column_host = Host
+label.tab.download.column_link     = Download
+label.tab.download.column_host     = Host
+label.tab.download.column_progress = Fortschritt
 label.tab.plugin_activity.column_plugin   = Name
 label.tab.plugin_activity.column_progress = Fortschritt
