--- a/trunk/LanguagePack_de.properties
+++ b/trunk/LanguagePack_de.properties
@@ -1,3 +1,8 @@
+action.add       = Fügt einen Downloadeintrag hinzu 
+action.delete    = Entfernt einen Downloadeintrag aus der Liste
+action.move_up   = Verschiebt die selektierten Einträge um einen Eintrag nach oben
+action.move_down = Verschiebt die selektierten Einträge um einen Eintrag nach unten
+action.start     = Startet den Download
 error.no_download = Es konnte kein weiterer Download ermittelt werden
 label.tab.download        = Download Liste
 label.tab.plugin_activity = Plugin Aktivitäten
