--- a/trunk/LanguagePack_de.properties
+++ b/trunk/LanguagePack_de.properties
@@ -6,6 +6,7 @@ action.start     = Startet den Download
 error.no_download = Es konnte kein weiterer Download ermittelt werden
 label.tab.download        = Download Liste
 label.tab.plugin_activity = Plugin Aktivitäten
+label.tab.download.column_index    = #
 label.tab.download.column_link     = Download
 label.tab.download.column_host     = Host
 label.tab.download.column_progress = Fortschritt
