--- a/trunk/LanguagePack_de.properties
+++ b/trunk/LanguagePack_de.properties
@@ -4,6 +4,7 @@ action.move_up   = Verschiebt die selektierten Einträge um einen Eintrag nach ob
 action.move_down = Verschiebt die selektierten Einträge um einen Eintrag nach unten
 action.start     = Startet den Download
 error.no_download = Es konnte kein weiterer Download ermittelt werden
+label.status.welcome = JDownloader - der platformunabhängige Downloader
 label.tab.download        = Download Liste
 label.tab.plugin_activity = Plugin Aktivitäten
 label.tab.download.column_index    = #
@@ -12,3 +13,5 @@ label.tab.download.column_host     = Host
 label.tab.download.column_progress = Fortschritt
 label.tab.plugin_activity.column_plugin   = Name
 label.tab.plugin_activity.column_progress = Fortschritt
+tooltip.status.plugin_decrypt = Zeigt, ob ein Entschlüssel-Plugin aktiv ist 
+tooltip.status.plugin_host    = Zeigt, ob Downloads aktiv sind
