--- a/trunk/LanguagePack_de.properties
+++ b/trunk/LanguagePack_de.properties
@@ -1,9 +1,19 @@
-action.add       = Fügt einen Downloadeintrag hinzu 
-action.delete    = Entfernt einen Downloadeintrag aus der Liste
-action.move_up   = Verschiebt die selektierten Einträge um einen Eintrag nach oben
-action.move_down = Verschiebt die selektierten Einträge um einen Eintrag nach unten
-action.start     = Startet den Download
-error.no_download = Es konnte kein weiterer Download ermittelt werden
+action.add.name       = Hinzufügen 
+action.add.desc       = Fügt einen Downloadeintrag hinzu 
+action.delete.name    = Löschen
+action.delete.desc    = Entfernt einen Downloadeintrag aus der Liste
+action.load.name      = Öffnen
+action.load.desc      = Lädt eine Datei
+action.move_up.name   = Hoch
+action.move_up.desc   = Verschiebt die selektierten Einträge um einen Eintrag nach oben
+action.move_down.name = Runter
+action.move_down.desc = Verschiebt die selektierten Einträge um einen Eintrag nach unten
+action.save.name      = Speichern
+action.save.desc      = Speichert die aktuelle Liste
+action.start.name     = Start
+action.start.desc     = Startet den Download
+action.start.mnem     = 
+error.no_download  = Es konnte kein weiterer Download ermittelt werden
 label.status.welcome = JDownloader - der platformunabhängige Downloader
 label.tab.download        = Download Liste
 label.tab.plugin_activity = Plugin Aktivitäten
@@ -13,5 +23,8 @@ label.tab.download.column_host     = Host
 label.tab.download.column_progress = Fortschritt
 label.tab.plugin_activity.column_plugin   = Name
 label.tab.plugin_activity.column_progress = Fortschritt
+menu.file = Datei
+menu.file.load = Datei öffnen
+menu.file.save = Datei speichern
 tooltip.status.plugin_decrypt = Zeigt, ob ein Entschlüssel-Plugin aktiv ist 
 tooltip.status.plugin_host    = Zeigt, ob Downloads aktiv sind
