Neue Menuitems Exit und Ansicht -> Log Fenster. Das Log Fenster Menuitem wird getoggled je nachdem ob das Fenster auf ist oder nicht.

--- a/trunk/LanguagePack_de.properties
+++ b/trunk/LanguagePack_de.properties
@@ -13,6 +13,12 @@ action.save.desc      = Speichert die aktuelle Liste
 action.start.name     = Start
 action.start.desc     = Startet den Download
 action.start.mnem     = 
+action.exit.name      = Beenden
+action.exit.desc      = Programm beenden
+action.exit.mnem      = 
+action.viewlog.name   = Log Fenster anzeigen
+action.viewlog.desc   = Wenn angewählt, wird das Log Fenster angezeigt
+action.viewlog.mnem   =
 error.no_download  = Es konnte kein weiterer Download ermittelt werden
 label.status.welcome = JDownloader - der platformunabhängige Downloader
 label.tab.download        = Download Liste
@@ -26,5 +32,6 @@ label.tab.plugin_activity.column_progress = Fortschritt
 menu.file = Datei
 menu.file.load = Datei öffnen
 menu.file.save = Datei speichern
+menu.view = Ansicht
 tooltip.status.plugin_decrypt = Zeigt, ob ein Entschlüssel-Plugin aktiv ist 
 tooltip.status.plugin_host    = Zeigt, ob Downloads aktiv sind
