--- a/trunk/ressourcen/LanguagePack_de.properties
+++ b/trunk/ressourcen/LanguagePack_de.properties
@@ -1,28 +1,31 @@
-action.add.name       = Hinzufügen 
-action.add.desc       = Fügt einen Downloadeintrag hinzu 
-action.delete.name    = Löschen
-action.delete.desc    = Entfernt einen Downloadeintrag aus der Liste
-action.load.name      = Öffnen
-action.load.desc      = Lädt eine Datei
-action.load.mnem      = F
-action.move_up.name   = Hoch
-action.move_up.desc   = Verschiebt die selektierten Einträge um einen Eintrag nach oben
-action.move_down.name = Runter
-action.move_down.desc = Verschiebt die selektierten Einträge um einen Eintrag nach unten
-action.save.name      = Speichern
-action.save.desc      = Speichert die aktuelle Liste
-action.save.mnem      = S
-action.start.name     = Start
-action.start.desc     = Startet den Download
-action.start.mnem     = D
-action.start.accel    = ctrl 9
-action.exit.name      = Beenden
-action.exit.desc      = Programm beenden
-action.exit.mnem      = B
-action.exit.accel     = ctrl X
-action.viewlog.name   = Log Fenster anzeigen
-action.viewlog.desc   = Wenn angewählt, wird das Log Fenster angezeigt
-action.viewlog.mnem   =
+action.add.name            = Hinzufügen 
+action.add.desc            = Fügt einen Downloadeintrag hinzu 
+action.configuration.name  = Konfiguration 
+action.configuration.desc  = Konfiguration ändern 
+action.configuration.accel = F11 
+action.delete.name         = Löschen
+action.delete.desc         = Entfernt einen Downloadeintrag aus der Liste
+action.load.name           = Öffnen
+action.load.desc           = Lädt eine Datei
+action.load.mnem           = F
+action.move_up.name        = Hoch
+action.move_up.desc        = Verschiebt die selektierten Einträge um einen Eintrag nach oben
+action.move_down.name      = Runter
+action.move_down.desc      = Verschiebt die selektierten Einträge um einen Eintrag nach unten
+action.save.name           = Speichern
+action.save.desc           = Speichert die aktuelle Liste
+action.save.mnem           = S
+action.start.name          = Start
+action.start.desc          = Startet den Download
+action.start.mnem          = D
+action.start.accel         = ctrl 9
+action.exit.name           = Beenden
+action.exit.desc           = Programm beenden
+action.exit.mnem           = B
+action.exit.accel          = ctrl X
+action.viewlog.name        = Log Fenster anzeigen
+action.viewlog.desc        = Wenn angewählt, wird das Log Fenster angezeigt
+action.viewlog.accel       = F1
 error.no_download  = Es konnte kein weiterer Download ermittelt werden
 label.status.welcome = JDownloader - der platformunabhängige Downloader
 label.tab.download        = Download Liste
@@ -37,9 +40,9 @@ menu.file = Datei
 menu.file_mnem = D
 menu.file.load = Datei öffnen
 menu.file.save = Datei speichern
-menu.view = Ansicht
-menu.view_mnem = A
 menu.action = Aktionen
-menu.action_men = K
+menu.action_mnem = K
+menu.extra = Extra
+menu.extra_mnenm = X
 tooltip.status.plugin_decrypt = Zeigt, ob ein Entschlüssel-Plugin aktiv ist 
 tooltip.status.plugin_host    = Zeigt, ob Downloads aktiv sind
