Kleine Veränderungen in der Konfig und der GUI

--- a/trunk/ressourcen/LanguagePack_de.properties
+++ b/trunk/ressourcen/LanguagePack_de.properties
@@ -1,5 +1,7 @@
 action.add.name            = Hinzufügen 
 action.add.desc            = Fügt einen Downloadeintrag hinzu 
+action.add.mnem            = H 
+action.add.accel           = ctrl V 
 action.configuration.name  = Konfiguration 
 action.configuration.desc  = Konfiguration ändern 
 action.configuration.accel = F11 
