--- a/trunk/ressourcen/LanguagePack_de.properties
+++ b/trunk/ressourcen/LanguagePack_de.properties
@@ -28,6 +28,14 @@ action.exit.accel          = ctrl X
 action.viewlog.name        = Log Fenster anzeigen
 action.viewlog.desc        = Wenn angewählt, wird das Log Fenster angezeigt
 action.viewlog.accel       = F1
+action.reconnect.desc	   =Manuellen Reconnect durchführen
+action.reconnect.name      =Manueller Reconnect
+action.reconnect.mnem      =R
+action.reconnect.accel     =ctrl R
+action.update.desc         =Automatisches Update ausführen
+action.update.name			=Autoupdate
+action.update.mnem			=A
+action.update.accel			=ctrl+7
 error.no_download  = Es konnte kein weiterer Download ermittelt werden
 label.status.welcome = JDownloader - der platformunabhängige Downloader
 label.tab.download        = Download Liste
@@ -35,6 +43,7 @@ label.tab.plugin_activity = Plugin Aktivitäten
 label.tab.download.column_index    = #
 label.tab.download.column_link     = Download
 label.tab.download.column_host     = Host
+label.tab.download.column_status   = Status
 label.tab.download.column_progress = Fortschritt
 label.tab.plugin_activity.column_plugin   = Name
 label.tab.plugin_activity.column_progress = Fortschritt
@@ -48,3 +57,11 @@ menu.extra = Extra
 menu.extra_mnenm = X
 tooltip.status.plugin_decrypt = Zeigt, ob ein Entschlüssel-Plugin aktiv ist 
 tooltip.status.plugin_host    = Zeigt, ob Downloads aktiv sind
+action.add.mnem = A
+action.add.accel = action.add.accel
+action.delete.mnem = D
+action.delete.accel = action.delete.accel
+action.load.accel = action.load.accel
+action.save.accel = action.save.accel
+action.configuration.mnem = C
+menu.extra_mnem = E
