Konfigurationsdialog verbessert (war mittlerweile VIEL zu groß)

--- a/trunk/ressourcen/LanguagePack_de.properties
+++ b/trunk/ressourcen/LanguagePack_de.properties
@@ -3,13 +3,15 @@ action.add.desc            = Fügt einen Downloadeintrag hinzu
 action.add.mnem            = H 
 action.add.accel           = ctrl V 
 action.configuration.name  = Konfiguration 
-action.configuration.desc  = Konfiguration ändern 
+action.configuration.desc  = Konfiguration ändern
+action.configuration.mnem  = C 
 action.configuration.accel = F11 
 action.delete.name         = Löschen
 action.delete.desc         = Entfernt einen Downloadeintrag aus der Liste
 action.load.name           = Öffnen
 action.load.desc           = Lädt eine Datei
 action.load.mnem           = F
+action.load.accel          = ctrl O
 action.move_up.name        = Hoch
 action.move_up.desc        = Verschiebt die selektierten Einträge um einen Eintrag nach oben
 action.move_down.name      = Runter
@@ -17,6 +19,7 @@ action.move_down.desc      = Verschiebt die selektierten Einträge um einen Eintr
 action.save.name           = Speichern
 action.save.desc           = Speichert die aktuelle Liste
 action.save.mnem           = S
+action.save.accel          = ctrl S
 action.start.name          = Start
 action.start.desc          = Startet den Download
 action.start.mnem          = D
@@ -38,6 +41,12 @@ action.update.mnem			=A
 action.update.accel			=ctrl+7
 error.no_download  = Es konnte kein weiterer Download ermittelt werden
 label.status.welcome = JDownloader - der platformunabhängige Downloader
+label.config.router_control    = Kontrolle
+label.config.router_login      = Anmeldung
+label.config.router_router     = Routerdaten
+label.config.router_connect    = Wiederaufbau
+label.config.router_disconnect = Abmeldung
+label.config.router_ip_check   = IP Check
 label.tab.download        = Download Liste
 label.tab.plugin_activity = Plugin Aktivitäten
 label.tab.download.column_index    = #
@@ -54,14 +63,7 @@ menu.file.save = Datei speichern
 menu.action = Aktionen
 menu.action_mnem = K
 menu.extra = Extra
-menu.extra_mnenm = X
+menu.extra_mnem = E
+title.config = Konfiguration
 tooltip.status.plugin_decrypt = Zeigt, ob ein Entschlüssel-Plugin aktiv ist 
 tooltip.status.plugin_host    = Zeigt, ob Downloads aktiv sind
-action.add.mnem = A
-action.add.accel = action.add.accel
-action.delete.mnem = D
-action.delete.accel = action.delete.accel
-action.load.accel = action.load.accel
-action.save.accel = action.save.accel
-action.configuration.mnem = C
-menu.extra_mnem = E
