--- a/trunk/ressourcen/LanguagePack_de.properties
+++ b/trunk/ressourcen/LanguagePack_de.properties
@@ -9,7 +9,7 @@ action.configuration.accel = F11
 action.delete.name         = Löschen
 action.delete.desc         = Entfernt einen Downloadeintrag aus der Liste
 action.load.name           = Öffnen
-action.load.desc           = Lädt eine Datei
+action.load.desc           = Lädt eine Linkliste
 action.load.mnem           = F
 action.load.accel          = ctrl O
 action.move_up.name        = Hoch
@@ -35,10 +35,10 @@ action.reconnect.desc	   =Manuellen Reconnect durchführen
 action.reconnect.name      =Manueller Reconnect
 action.reconnect.mnem      =R
 action.reconnect.accel     =ctrl R
-action.update.desc         =Automatisches Update ausführen
+action.update.desc         =Update ausführen
 action.update.name			=Autoupdate
 action.update.mnem			=A
-action.update.accel			=ctrl+7
+action.update.accel			=ctrl 7
 error.no_download  = Es konnte kein weiterer Download ermittelt werden
 label.status.welcome = JDownloader - der platformunabhängige Downloader
 label.config.router_control    = Kontrolle
@@ -58,8 +58,8 @@ label.tab.plugin_activity.column_plugin   = Name
 label.tab.plugin_activity.column_progress = Fortschritt
 menu.file = Datei
 menu.file_mnem = D
-menu.file.load = Datei öffnen
-menu.file.save = Datei speichern
+menu.file.load = Linkliste laden
+menu.file.save = Linkliste speichern
 menu.action = Aktionen
 menu.action_mnem = K
 menu.extra = Extra
@@ -67,3 +67,15 @@ menu.extra_mnem = E
 title.config = Konfiguration
 tooltip.status.plugin_decrypt = Zeigt, ob ein Entschlüssel-Plugin aktiv ist 
 tooltip.status.plugin_host    = Zeigt, ob Downloads aktiv sind
+action.add.mnem = A
+action.add.accel = action.add.accel
+action.delete.mnem = D
+action.delete.accel = action.delete.accel
+action.load.accel = action.load.accel
+action.save.accel = action.save.accel
+action.configuration.mnem = C
+menu.extra_mnem = E
+action.dnd.desc = Drag&Drop Target zeigen/verstecken. Auf das Target könen Links aus dem Browser gezogen werden
+action.dnd.name = Drag&Drop Target
+action.dnd.mnem = 6
+action.dnd.accel= ctrl 6
