--- a/trunk/ressourcen/LanguagePack_de.properties
+++ b/trunk/ressourcen/LanguagePack_de.properties
@@ -26,6 +26,10 @@ action.load.name           = Öffnen
 action.load.desc           = Lädt eine Linkliste
 action.load.mnem           = F
 action.load.accel          = ctrl O
+action.load_container.name  = Containerdatei öffnen
+action.load_container.desc  = Lädt eine Datei mit verschlüsselten Links
+action.load_container.mnem  = C
+action.load_container.accel = ctrl shift O
 action.move_up.name        = Hoch
 action.move_up.desc        = Verschiebt die selektierten Einträge um einen Eintrag nach oben
 action.move_down.name      = Runter
@@ -77,10 +81,12 @@ label.tab.plugin_activity.column_progress = Fortschritt
 
 
 
-menu.file = Datei
+menu.file      = Datei
 menu.file_mnem = D
-menu.file.load = Linkliste laden
-menu.file.save = Linkliste speichern
+menu.file.load_container = Containerdatei laden
+menu.file.load           = Linkliste laden
+menu.file.save           = Linkliste speichern
+menu.file.load_container = Container laden
 menu.edit = Bearbeiten
 menu.edit_mnem = B
 menu.action = Aktionen
