--- a/trunk/ressourcen/LanguagePack_de.properties
+++ b/trunk/ressourcen/LanguagePack_de.properties
@@ -51,6 +51,10 @@ action.start.name          = Start
 action.start.desc          = Startet den Download
 action.start.mnem          = D
 action.start.accel         = ctrl 9
+action.pause.name          = Pause
+action.pause.desc          = Nach diesen Downloads anhalten
+action.pause.mnem          = E
+action.pause.accel         = ctrl 0
 action.exit.name           = Beenden
 action.exit.desc           = Programm beenden
 action.exit.mnem           = B
