--- a/trunk/ressourcen/LanguagePack_en.properties
+++ b/trunk/ressourcen/LanguagePack_en.properties
@@ -8,7 +8,7 @@ action.configuration.desc  = Change Properties
 action.configuration.mnem  = C 
 action.configuration.accel = F11
 
-action.dnd.desc            = Zwischenablage + Drag&Drop Target zeigen/verstecken. Auf das Target könen Links aus dem Browser gezogen werden
+action.dnd.desc            = Clipboard + Drag&Drop Target show/hide. You can drop a link on the target
 action.dnd.name            = Drag&Drop Target
 action.dnd.mnem            = 6
 action.dnd.accel           = ctrl 6
@@ -72,6 +72,16 @@ action.tester.name          = Testtrigger
 action.tester.desc          = Fires a Testtrigger Event
 action.tester.mnem          = T
 action.tester.accel         = ctrl T
+
+action.unrar.name		   = extract
+action.unrar.desc		   = extracts the RAR-files in your downloadfolder
+action.unrar.mnem		   = e
+action.unrar.accel		   = ctrl E
+
+action.passwordlist.name   = edit passwordlist
+action.passwordlist.desc   = shows the editor for your passwordlist
+action.passwordlist.mnem   = P
+action.passwordlist.accel   = F3
 
 action.pause.name          = Pause
 action.pause.desc          = Stop after these downloads
