--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -465,7 +465,7 @@ gui.menu.action.save.desc = Als DLC speichern
 gui.menu.action.save.mnem = S
 gui.menu.action.save.name = Downloadliste speichern(DLC)
 gui.menu.action.start.accel = CTRL+9
-gui.menu.action.start.desc = Start/Stop Sownloads
+gui.menu.action.start.desc = Start/Stop Downloads
 gui.menu.action.start.mnem = D
 gui.menu.action.start.name = Start
 gui.menu.action.tester.accel = CTRL+T
