--- a/trunk/ressourcen/jd/languages/Turkish.lng
+++ b/trunk/ressourcen/jd/languages/Turkish.lng
@@ -304,7 +304,14 @@ gui.downloadTab.popup.showInfos = Show info
 gui.downloadTab.popup.up = Yukarı taşı
 gui.dropTarget.downloadsAdded = İndirme eklendi:
 gui.droptarget.label = Linklerini buraya BIRAK!
-gui.droptarget.title = Link toplayıcı!
+gui.droptarget.title = Link toplayıcı_Linklerini buraya sürükle!
+gui.frame.packageinfo.entrycomment = Yorumlar
+gui.frame.packageinfo.entrydldirectory = Dlklasörü
+gui.frame.packageinfo.entrylinks = Linkler
+gui.frame.packageinfo.entryloaded = Yüklendi
+gui.frame.packageinfo.entryname = Adı
+gui.frame.packageinfo.entrypackagesize = Paket Boyutu
+gui.frame.packageinfo.title = Paket Bilgileri:
 gui.helpLocale.title = Destek çok yardımcı oluyor!
 gui.images.jd_logo = gui.images.jd_logo
 gui.linkInfo.Plugin Status = Plugin Durumu
@@ -475,7 +482,7 @@ gui.menu.action.start.name = Başlat
 gui.menu.action.tester.accel = CTRL+T
 gui.menu.action.tester.desc = Tetikleme testini başlat
 gui.menu.action.tester.mnem = T
-gui.menu.action.tester.name = Test Trigger
+gui.menu.action.tester.name = Tetikleme Testi
 gui.menu.action.unrar.accel = CTRL+R
 gui.menu.action.unrar.desc = RAR arşivlerini download klasörüne çıkartır
 gui.menu.action.unrar.mnem = E
@@ -769,7 +776,7 @@ gui.linkgrabber.menu.edit.removepackage = Paketi kaldır
 gui.linkgrabber.tabs.context.newpackage = Yeni paket
 gui.linkinformation.title = Link Information:
 gui.logDialog.title = jDownloader günlüğü
-gui.menu.plugins = Eklentiler
+gui.menu.plugins = Takma Birimler
 gui.splash.text.configLoaded = Yapılandırma yükleniyor
 gui.splash.text.finished = Bitti
 gui.splash.text.initcontroller = Denetleyici başlatılıyor
@@ -784,7 +791,7 @@ gui.statusbar.sim_ownloads = Mak.İnd.
 gui.statusbar.speed = Hız
 gui.table.contextmenu.abort = Vazgeç
 gui.table.contextmenu.abortpackage = Vazgeç
-gui.table.contextmenu.browseLink = Tarayıcı'da Aç
+gui.table.contextmenu.browseLink = Tarayıcı'da aç (Moz/IE.etc)
 gui.table.contextmenu.delete = Sil
 gui.table.contextmenu.deletepackage = Sil
 gui.table.contextmenu.disable = Devre Dışı Bırak
@@ -806,6 +813,9 @@ gui.table.contextmenu.pluginsubmenu = Takmabirim
 gui.table.contextmenu.reset = Sıfırla (resetle)
 gui.table.contextmenu.resetpackage = Sıfırla (resetle)
 gui.table.contextmenu.resume = Sürdür
+gui.table.draganddrop.cancel = İptal
+gui.table.draganddrop.movepackagebefore = Vor Paket '%s' einfügen
+gui.table.draganddrop.movepackageend = Nach Paket '%s' einfügen
 gui.tooltip.statusbar.premium = Premiumİndirmeler Açık/Kapalı
 gui.tooltip.statusbar.simultan_downloads = Aynı anda Mak. indirme sayısı
 gui.tooltip.statusbar.speedlimiter = GHızlimiti(kb/s) [0:infinite]
@@ -879,13 +889,13 @@ gui.menu.plugins.container = Konteyner
 gui.menu.plugins.decrypt =Deşifreleyici
 gui.menu.plugins.host = Hoster
 plugins.hoster.rapidshare.com.loadpreBytes = Bir dosyanın sadece ilk * Byte ını yükle [-1 to disable]
-plugins.rapidshare.menu.happyHours = Happy Hours bilgisi al
+plugins.rapidshare.menu.happyHours = Happy Hours kontrolü yap
 plugins.rapidshare.menu.premium = Premium Hesaplar
 plugins.rapidshare.menu.premium1 = 1. Hesap (
 plugins.rapidshare.menu.premium2 = 2. Hesap (
 plugins.rapidshare.menu.premium3 = 3. Hesap (
 plugins.rapidshare.menu.premiumInfo = Hesap bilgileini al
-plugins.rapidshare.captcha = OCR ve Bekleme_süre
+plugins.rapidshare.captcha = OCR ve Bekleme
 plugins.rapidshare.menu.forcefreewhilehh = Happy hours zaman diliminde indirmeyi zorla
 plugins.rapidshare.menu.happyHourswait = Happy hours için bekle
 gui.config.captcha.CES.tab = Captcha Takas Servisi
