--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -338,7 +338,7 @@ gui.config.unrar.usehjmerge = HJSplit-Archive automatisch zusammenfügen
 gui.config.webupdate.name = Webupdate
 gui.dialogs.agb_tos.title = Allgemeine Geschäftsbedingungen nicht aktzeptiert
 gui.dialogs.helpDialog.btn.help = Hilfe anzeigen
-gui.dialogs.helpDialog.btn.ok = Jetzt aktualisieren!
+gui.dialogs.helpDialog.btn.ok = OK
 gui.dialogs.helpDialog.defaultTitle = jDownloader Soforthilfe
 gui.dialogs.progress.title = Fortschritt...bitte warten
 gui.download.bps = bytes/s
@@ -631,12 +631,12 @@ interaction.infoFileWriter.variables = Verfügbare Parameter
 interaction.jdexit.name = Beenden
 interaction.liveHeader.name = HTTP Live Header
 interaction.liveHeader.progress.0_title = HTTPLiveHeader Reconnect
-interaction.liveHeader.progress.1_retry = HTTPLiveHeader #" + retries
-interaction.liveHeader.progress.2_ip = (IP
-interaction.liveHeader.progress.3_step = (STEP
-interaction.liveHeader.progress.4_step = (%s
-interaction.liveHeader.progress.5_ipcheck = (IPCHECK
-interaction.liveHeader.progress.5_wait = (WAIT
+interaction.liveHeader.progress.1_retry = HTTPLiveHeader #
+interaction.liveHeader.progress.2_ip = IP
+interaction.liveHeader.progress.3_step = Schritt
+interaction.liveHeader.progress.4_step = Schritt %s
+interaction.liveHeader.progress.5_ipcheck = IP Überprüfung
+interaction.liveHeader.progress.5_wait = Auf Router/Modem warten
 interaction.packagemanager.name = Pakete aktualisieren
 interaction.resetLink.name = Downloadlink zurücksetzen
 interaction.resetLink.options.all = alle Links
